--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,7 +2,7 @@ name: Snake
 
 on:
   schedule: # execute every 6 hours
-    - cron: "* * * * *"
+    - cron: "15 * * * *"
   workflow_dispatch:
 
 jobs:
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: Platane/snk/svg-only@v1.1.0
         with:
-        
+
           # Options
           github_user_name: ${{ github.repository_owner }}
           svg_out_path: github-snake.svg
