--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -9,8 +9,7 @@ jobs:
   github-metrics:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout files
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         run: |-
           git config --global user.email "smintoverflow@gmail.com"
           git config --global user.name "smintf"
