--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -35,3 +35,6 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
+          plugin_achievements: yes
+          plugin_achievements_secrets: yes
+          plugin_achievements_display: compact
