--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -19,6 +19,7 @@ jobs:
           template: classic
           base: activity, community, repositories, metadata
           config_timezone: America/New_York
+          plugin_introduction: yes
           plugin_habits: yes
           plugin_habits_days: 14
           plugin_habits_facts: yes
@@ -35,6 +36,12 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
+          plugin_code: yes
+          plugin_licenses: yes
+          plugin_licenses_ratio: yes
           plugin_achievements: yes
           plugin_achievements_secrets: yes
           plugin_achievements_display: compact
+          plugin_skyline: yes
+          plugin_skyline_frames: 120
+          plugin_skyline_quality: 1
